Inclusion of introduction

--- a/capitulos/1-introducao.tex
+++ b/capitulos/1-introducao.tex
@@ -1,2 +1,36 @@
 \chapter{Introdução}
 \label{introduction}
+
+Desde tempos anciões, segredos sempre existiram e métodos para deixa-los indecifráveis foram construídos. Enquanto algumas pessoas estavam escondendo informações, outras curiosos estavam tentando quebra-los. ~\cite{alexander-maximov}
+
+Na constante luta entre manter e quebrar segredos, métodos foram desenvolvidos para se esconder informações e falhas nesses métodos foram exploradas para se obter as informações.
+
+Um dos métodos para obter informações sem a autorização necessária é a análise de frequência dessas informações escondidas. Com essa análise, é possível se obter as informações. Há estudos que indicam a frequência média em que cada letra é utilizada em um texto e com isso é possível ter acesso a mensagem que deveria ser um segredo. 
+
+\section{Objetivos do Trabalho}
+\label{paper-objectives}
+
+\subsection{Objetivo Geral}
+\label{general-objective}
+Esse trabalho visa apresentar um algoritmo para dificultar a análise de frequência de um texto e  assim se comunicar seguramente e privadamente.
+
+\subsection{Objetivos Específicos}
+\label{specifics-objectives}
+
+\begin{itemize}
+	\item Identificar e estudar as principais formas de criptografia.
+	\item Identificar e estudar as principais formas de criptoanálise.
+	\item Identificar e estudar geradores de números pseudo-aleatórios.
+	\item Realizar a primeira proposta de algoritmo.
+\end{itemize}
+
+\section{Organização do Trabalho}
+\label{paper-organization}
+
+O trabalho tem a seguinte organização: no capítulo 2\ref{cryptography} é apresentado os principais tipos de algoritmos criptográficos incluindo a descrição de exemplo dos mesmos e também é descrito métodos de criptoanálise.
+
+No capitulo 3\ref{prng} é descrito o que é um gerador de números pseudo-aleatórios, alguns exemplos e suas implementações e é explicado a importância desses geradores para a criptografia. 
+
+No capitulo 4\ref{proposed-algorithm} é explicado a proposta do algoritmo com suas soluções, explicação do seu funcionamento e as principais vantagens em relação a outros algoritmos.
+
+No capitulo 5\ref{conclusion} a conclusão desse trabalho é apresentada e a descrição de trabalhos futuros e suas importâncias são descritas. 
