Including resumo and abstract

--- a/editaveis/abstract.tex
+++ b/editaveis/abstract.tex
@@ -1,10 +1,9 @@
 \begin{resumo}[Abstract]
  \begin{otherlanguage*}{english}
-   This is the english abstract.
-
+	In cryptography there are two ways to cipher a text: with symmetric key and assymmetric key. The symmetric key is divided in  block cipher and stream cipher. One failure that is well explored by attackers that wish to break a cipher text is the frequency analysis, because a lot of the existing algorithms don't worry about balancing the cipher text. This course conclusion work presents an algorithm proposition that will perform the complete balancing of the cipher text, improving your secuity against attackers and curious. 
    \vspace{\onelineskip}
  
    \noindent 
-   \textbf{Key-words}: latex. abntex. text editoration.
+   \textbf{Key-words}: crytography. stream cipher. balancing. frequency
  \end{otherlanguage*}
 \end{resumo}
