--- a/editaveis/resumo.tex
+++ b/editaveis/resumo.tex
@@ -1,17 +1,8 @@
 \begin{resumo}
- O resumo deve ressaltar o objetivo, o método, os resultados e as conclusões 
- do documento. A ordem e a extensão
- destes itens dependem do tipo de resumo (informativo ou indicativo) e do
- tratamento que cada item recebe no documento original. O resumo deve ser
- precedido da referência do documento, com exceção do resumo inserido no
- próprio documento. (\ldots) As palavras-chave devem figurar logo abaixo do
- resumo, antecedidas da expressão Palavras-chave:, separadas entre si por
- ponto e finalizadas também por ponto. O texto pode conter no mínimo 150 e 
- no máximo 500 palavras, é aconselhável que sejam utilizadas 200 palavras. 
- E não se separa o texto do resumo em parágrafos.
+A criptografia tem  duas principais formas de cifrar um texto com chave simétrica e chave assimétrica. A chave simétrica é dividida em cifra de bloco e cifra de fluxo. Uma falha muito explorada por atacantes que desejam quebrar um texto cifrado é a análise de frequência de um texto cifrado, pois muitos dos algoritmos não se preocupam com o balanceamento de um texto cifrado. Este trabalho de conclusão de curso apresenta uma proposta de algoritmo que irá realizar o balanceamento completo do texto cifrado, aumentando sua segurança contra atacantes e curiosos.
 
  \vspace{\onelineskip}
     
  \noindent
- \textbf{Palavras-chaves}: latex. abntex. editoração de texto.
+ \textbf{Palavras-chaves}: criptografia. cifra de fluxo. balanceamento.
 \end{resumo}
