--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -3,19 +3,19 @@
 \curso{Engenharia de Software}
 
 % Dados do trabalho
-\titulo{Título: Subtítulo do Trabalho}
+\titulo{Equalização de Frequência em Cifradores de      
+Fluxo: Uma proposta de algoritmo}
 \data{2014}
 \palavraChaveUm{Palavra-chave01}
 \palavraChaveDois{Palavra-chave02}
 
 % Dados da orientacao
 \orientador{Prof. Dr. Luiz Augusto Fontes Laranjeira}
-\coorientador{(quando houver, Titulação Acadêmica e Nome do Orientador)}
 
 % Dados para a ficha catalográfica
 \cdu{02:141:005.6}
 
 % Dados da aprovação do trabalho
-\dataDaAprovacao{01 de junho de 2013}
-\membroConvidadoUm{Titulação e Nome do Professor Convidado 01}
-\membroConvidadoDois{Titulação e Nome do Professor Convidado 02}
+\dataDaAprovacao{27 de junho de 2014}
+\membroConvidadoUm{Prof. Dr. Fabricio Ataides Braz}
+\membroConvidadoDois{Prof. Dr. Edson Alves da Costa Júnior}
